--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "as-nav-link": "^0.1.5",
+    "axios": "^0.21.1",
     "emailjs-com": "^2.6.4",
     "eslint": "^7.11.0",
     "gh-pages": "^3.1.0",
